ui_tests/use_items_res_5.stderr
error: failed to resolve `Foo`
  ┌─ main.box:1:5
  │
1 │ use Foo;
  │     ^^^

error: failed to resolve `Foo`
  ┌─ main.box:2:5
  │
2 │ use Foo;
  │     ^^^

